# sentiment-movie-recommendation

./: .dockerignore  .gitignore  README.md  fix_posters.py  requirements.txt
KinoServer/: README.md  pyproject.toml
KinoServer/app/: __main__.py  emotions.py  movie_filters.py
KinoServer/app/api/: __init__.py  emotion.py
KinoServer/app/api/images/: __init__.py  tmdb.py
KinoServer/app/api/movie/: movie.py
KinoServer/app/api/recommendations/: recommendations.py
KinoServer/app/api/user/: user.py
KinoServer/app/config/: config_reader.py
KinoServer/app/crud/: crud.py
KinoServer/app/db/: db.py  pgvector_compat.py
KinoServer/app/models/: __init__.py  models.py
KinoServer/app/schemas/: schemas.py
KinoServer/app/services/: recommendations.py
KinoServer/data/: movies.db
KinoServer/model/: requirements.txt  roBERT_class.py  test.py
bot/: .env  bot.py  requirements.txt
docker/: .env.example  bot.Dockerfile  frontend.Dockerfile  kinoserver.Dockerfile  nginx.conf  requirements-bot.txt
embedding/: embedding.py  tag_keywords.py
face_recognition/: face_recognition.py
parser/: auto_tags.py  database.py  fix_posters.py  genres.json  kinopoisk_client.py  load_all_movie_data.py  movie_data.py  offline_parser.py  parser.py  requirements.txt  tmdb_client.py
rating/: calculate_avg_ratings.py  emotions_rating_db.py  update_all_ratings.py
site/: index.html  movies.csv  movies.json  script.js
site/js/: api.js  cards.js  colors.js  config.js  favorites.js  loaders.js  state.js  ui_emotions.js  ui_reviews.js  user_gate.js  viewport_fix.js  write_queue.js
(+74 files in other folders)
